# agentroles

./: .gitignore  .gitleaks.toml  .markdownlint.jsonc  .markdownlintignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agentroles.yaml  multi-model-agentic-coding-report.md  opencode.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  new_target_request.md  new_target_request.yml
.github/workflows/: auto-bump.yml  ci.yml  lint.yml  markdown-lint.yml  pr-title-lint.yml  publish-pypi.yml  release.yml  sbom.yml  security.yml  stale.yml  typecheck.yml
agentroles/: __init__.py  cli.py  loader.py  models.py  plugin.py  routing.py  schema.py  validators.py
agentroles/targets/: __init__.py  aider.py  autogen.py  avante_nvim.py  bitrouter.py  claude_code.py  cline.py  codecompanion_nvim.py  codex_cli.py  cody.py  continue_.py  crewai.py  crush.py  ellama.py  factory.py  gemini_cli.py  goose.py  gptel.py  infermux.py  kilocode.py  langgraph.py  litellm.py  manifest.py  metagpt.py  opencode.py  openhands.py  openinterpreter.py  pearai.py  portkey.py  qodo.py  qwen_code.py  zed_ai.py
docs/: targets-research.md
npm/: .eslintrc.json  README.md  eslint.config.js  index.js  package-lock.json  package.json
targets/aider/: README.md
targets/autogen/: README.md
targets/avante_nvim/: README.md
targets/bitrouter/: README.md
targets/claude_code/: README.md
targets/cline/: README.md
targets/codecompanion_nvim/: README.md
targets/codex_cli/: README.md
targets/cody/: README.md
targets/continue/: README.md
targets/crewai/: README.md
targets/crush/: README.md
targets/ellama/: README.md
targets/factory/: README.md
targets/gemini_cli/: README.md
targets/goose/: README.md
targets/gptel/: README.md
targets/infermux/: README.md
targets/kilocode/: README.md
targets/langgraph/: README.md
targets/litellm_proxy/: README.md
targets/manifest/: README.md
targets/metagpt/: README.md
targets/opencode/: README.md
targets/openhands/: README.md
targets/openinterpreter/: README.md
targets/pearai/: README.md
targets/portkey/: README.md
targets/qodo/: README.md
targets/qwen_code/: README.md
targets/zed_ai/: README.md
tests/: test_claude_aider.py  test_cli.py  test_models.py  test_opencode_litellm.py  test_routing.py  test_validators.py
tests/fixtures/: invalid_claude_non_anthropic.yaml  invalid_extra_aider_role.yaml  invalid_missing_roles.yaml  valid_aider_only.yaml  valid_dynamic_routing.yaml  valid_full.yaml  valid_minimal.yaml
